--- a/main_app/templates/expense/details.html
+++ b/main_app/templates/expense/details.html
@@ -9,7 +9,7 @@
     <div class="card">
         <div class="card-content">
             <h1 class="card-title">Expense Amount: ${{ expenses.expense_amt }}</h1>
-            <p>Expense type: {{ expenses.expense_type }}</p>
+            <p>Expense type: {{ expenses.get_expense_type_display  }}</p>
         </div>
         <div class="card-action">
             <a href="{% url 'delete_expense' expenses.id %}">Delete</a>
