wip: can add additional savings to savings model

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -41,6 +41,9 @@
                 <ul class="right">
                     <a href="{% url 'expense_view' %}">Expense</a>
                 </ul>
+                <ul class="right">
+                    <a href="{% url 'additional_savings' %}">Add to Savings</a>
+                </ul>
             </div>
         </nav>
     </header>
