--- a/main_app/templates/savings/detail.html
+++ b/main_app/templates/savings/detail.html
@@ -11,8 +11,12 @@
     <div class="card">
         <div class="card-content">
             <h1 class="card-title">Your Saving Goal: ${{ saving.save_goal }}</h1>
-            <p>Time to Goal Savings: {{ time_till_goal }} </p>
+            <p>Time to Goal Savings: {{ time_till_goal }} Years </p>
+            {% if add_savings.count > 0 %}
+            <p>Current Savings: ${{ total_savings }}</p>
+            {% else %}
             <p>Current Savings: ${{ saving.current_savings }}</p>
+            {% endif %}
             <p>Monthly Income: ${{ saving.monthly_income }}</p>
             <p>Total Expenses:  ${{ total_expenses }}</p>
             <p>Income After Expenses:  ${{ income_after_expenses }}</p>
@@ -30,6 +34,15 @@
             <a href="{% url 'delete_savings' saving.id %}">Delete</a>
         </div>
     </div>
+    {% if add_savings.count > 0 %}
+    {% for add_save in add_savings %}
+    <div class="card">
+        <div class="card-content">
+            <p class="card-content">Additional Savings: {{ add_save.additional_savings }}</p>
+        </div>
+    </div>
+    {% endfor %}
+    {% endif %}
     {%  if expenses.count > 0 %}
     {% for expense in expenses %}
     <a href="{% url 'expense_details' expense.id %}">
@@ -49,4 +62,5 @@
     </div>
     {% endif %}
 </div>
+
 {% endblock %}
