--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -1,4 +1,59 @@
-{% extends 'base.html' %}
-{% block content %}
-    <h1>homepage</h1>
-{% endblock %}
+
+{% load static %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/home_style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+
+    <title>Homepage</title>
+
+</head>
+<body class="homepage-bg">
+    <header class="navbar-fixed">
+        <ul id="dropdown1" class="dropdown-content">
+            <li> <a href="{% url 'saving_create' %}">Get Started on Your Goal</a></li>
+            <li><a href="{% url 'savings_index' %}">Savings</a></li>
+            <li><a href="{% url 'additional_savings' %}">Add to Savings</a></li>
+        </ul>
+        <nav>
+            <div class="nav-wrapper green lighten-1">
+                <a href="/" class=" brand-logo">Savings & Expense Goal</a>
+                <ul class="right hide-on-med-and-down">
+                    <li><a href="/about">About</a></li>
+                    {% if user.is_authenticated %}
+                    <ul id="dropdown2" class="dropdown-content">
+                        <li><a href="{% url 'create_expense' %}">Add Expense</a></li>
+                        <li><a href="{% url 'expense_view' %}">View Expense</a></li>
+                    </ul>
+                    <li><a class=" dropdown-trigger" href="#!" data-target="dropdown1">Get Started on Saving<i class="material-icons right">arrow_drop_down</i></a></li>
+                    <li><a class=" dropdown-trigger" href="#!" data-target="dropdown2">Expenses<i class="material-icons right">arrow_drop_down</i></a></li>
+                    <li><a href="{% url 'logout' %}">Logout</a></li>
+                    {% else %}
+                    <li><a href="{% url 'signup' %}">Signup</a></li>
+                    <li><a href="{% url 'login' %}">Login</a></li>
+                    {% endif %}
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main class="container">
+        <h1>Homepage</h1>
+    </main>
+    <footer class="page-footer green lighten-1">
+        <p>Copyright &copy; All Rights Reserved 2023</p>
+    </footer>
+</body>
+</html>
+
+<script>
+    $(document).ready(() => {
+        $(".dropdown-trigger").dropdown();
+    })
+</script>
