--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -44,7 +44,8 @@
         </nav>
     </header>
     <main class="container">
-        <h1>Homepage</h1>
+        <h1>Savings & Expense Goal</h1>
+        <p>Helping you reach your financial goals</p>
     </main>
     <footer class="page-footer green lighten-1">
         <p>Copyright &copy; All Rights Reserved 2023</p>
