--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script> 
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
     {% block title %}
     <title>Savings Goals</title>
@@ -36,6 +37,7 @@
                     <li><a class=" dropdown-trigger" href="#!" data-target="dropdown1">Get Started on Saving<i class="material-icons right">arrow_drop_down</i></a></li>
                     <li><a class=" dropdown-trigger" href="#!" data-target="dropdown2">Expenses<i class="material-icons right">arrow_drop_down</i></a></li>
                     <li><a href="{% url 'logout' %}">Logout</a></li>
+                    <li><a href="{% url 'articles' %}">Articles</a></li>
                     {% else %}
                     <li><a href="{% url 'signup' %}">Signup</a></li>
                     <li><a href="{% url 'login' %}">Login</a></li>
