--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -34,6 +34,7 @@
                     </ul>
                     <li><a class=" dropdown-trigger" href="#!" data-target="dropdown1">Get Started on Saving<i class="material-icons right">arrow_drop_down</i></a></li>
                     <li><a class=" dropdown-trigger" href="#!" data-target="dropdown2">Expenses<i class="material-icons right">arrow_drop_down</i></a></li>
+                    <li><a href="{% url 'articles' %}">Articles</a></li>
                     <li><a href="{% url 'logout' %}">Logout</a></li>
                     {% else %}
                     <li><a href="{% url 'signup' %}">Signup</a></li>
