--- a/main_app/templates/expense/create_expense.html
+++ b/main_app/templates/expense/create_expense.html
@@ -22,4 +22,18 @@
     </table>
     <input type="submit" value="Submit" class="btn">
 </form>
+
+
+<script>
+    const dateElement = document.getElementById('id_date');
+    const expenseTypeElement = document.getElementById('id_expense_type');
+
+    M.Datepicker.init(dateElement, {
+        format: 'yyyy-mm-dd',
+        defaultDate: new Date(),
+        setDefaultDate: true,
+        autoClose: true
+    });
+    M.FormSelect.init(expenseTypeElement)
+</script>
 {% endblock %}
